[package]
name = "web-memory"
version = "0.1.0"
authors = ["ryosukeeeee <ryou.fm.bros@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.7", features = ["full"] }
tokio = { version = "1.6.0", features = ["macros", "rt-multi-thread"]}
